\name{NEWS}

\title{NEWS file for the TPmsm package}

\section{Changes in version 1.2.1}{
	\itemize{
		\item{Corrected DESCRIPTION and NAMESPACE files.}
	}
}

\section{Changes in version 1.2.0}{
	\itemize{
		\item{Improved the documentation.}

		\item{Renamed threadsTP function to setThreadsTP.}

		\item{Implemented RngStreams C package for
		parallel random number generation.}

		\item{Added setPackageSeedTP function for
		defining the seed of the RngStreams C package.}

		\item{Added setSeedTP function for saving and restoring
		the individual seeds of the RNG streams used by the
		RngStreams C package.}

		\item{Added research article to the CITATION file.}
	}
}

\section{Changes in version 1.1.1}{
	\itemize{
		\item{Improved the documentation.}

		\item{Removed unnecessary require calls from R code.}
	}
}

\section{Changes in version 1.1.0}{
	\itemize{
		\item{Changed package encoding to UTF-8.}

		\item{Added lines methods for TPmsm and TPCmsm objects.}

		\item{Added CITATION file.}

		\item{Changed parameterization of the bivariate and univariate
		exponential models of distribution available for the dgpTP function.
		Now the mean of the univariate exponential model of distribution is
		equal to it's parameter.}

		\item{Removed symmetric and asymmetric options from window
		parameter in transLS, transLIN and transIPCW functions.}

		\item{Changes were made to the kernel algorithms that might
		improve speed up to around 25\% in bootstrap. This is particularly
		evident in the cross-validation algorithm available in the transLS
		function.}

		\item{Hided unneeded foreign language functions inside the shared
		object or dynamic link library.}

		\item{Added option to compute the bandwidth by cross-validation
		for both the location and scale functions. This applies to
		the Location-Scale estimator.}

		\item{Fixed a bug in both the AJ and PAJ algorithms that might result
		in wrong transition probability estimates from state 1 to state 2