@@ -2,6 +2,15 @@
 
 \title{NEWS file for the TPmsm package}
 
+\section{Changes in version 1.2.2}{
+	\itemize{
+		\item{Fixed compiler warning in "RngStream.c" source file.}
+		
+		\item{Temporarily disabled OpenMP with Clang compiler in
+		"transLS.c" source file.}
+	}
+}
+
 \section{Changes in version 1.2.1}{
 	\itemize{
 		\item{Corrected DESCRIPTION and NAMESPACE files.}
